  behaving as they did previously.

- When using setDebug with packrat parsing enabled, packrat cache hits will
  now be included in the output, shown with a leading '*'. (Previously, cache
  hits and responses were not included in debug output.) For those using custom
  debug actions, see the following bullet regarding an optional API change
  for those methods.

- Fixed traceback trimming, and added ParserElement.verbose_traceback
  save/restore to reset_pyparsing_context().

- Default string for Word expressions now also include indications of
  min and max length specification, if applicable, similar to regex length
  specifications:

        Word(alphas)             -> "W:(A-Za-z)"
        Word(nums)               -> "W:(0-9)"
        Word(nums, exact=3)      -> "W:(0-9){3}"
        Word(nums, min=2)        -> "W:(0-9){2,...}"
        Word(nums, max=3)        -> "W:(0-9){1,3}"
        Word(nums, min=2, max=3) -> "W:(0-9){2,3}"

  For expressions of the Char class (similar to Word(..., exact=1), the expression
  is simply the character range in parentheses:

        Char(nums)               -> "(0-9)"
        Char(alphas)             -> "(A-Za-z)"

- Removed copy() override in Keyword class which did not preserve definition
  of ident chars from the original expression. PR #233 submitted by jgrey4296,
  thanks!

- In addition to pyparsing.__version__, there is now also a pyparsing.__version_info__,
  following the same structure and field names as in sys.version_info.


Version 3.0.0a2 - June, 2020
----------------------------
- Summary of changes for 3.0.0 can be found in "What's New in Pyparsing 3.0.0"
  documentation.

- API CHANGE
  Changed result returned when parsing using countedArray,
  the array items are no longer returned in a doubly-nested
  list.

- An excellent new enhancement is the new railroad diagram
  generator for documenting pyparsing parsers:

        import pyparsing as pp